rapidio: keystone: introduce TI KeyStone RapidIO mport driver v1.2
This driver provides the support of the KeyStone Serial RapidIO controller
following the Linux mport RIO driver model.

It supports the following features:
 - serial RapidIO controller hw initialization including SerDes setup
 - maintenance packet support and RapidIO configuration space management
 - LSU management for DirectIO transfers
 - doorbell transmit and receive
 - Message Passing (MP) with multiple receive mailboxes
 - Type 9 and type 11 packets for MP
 - port-write management
 - port error recovery management
 - interrupt support (transfer completion, error, port-write-in, doorbells)
 - hw packet forwarding
 - delayed port registration

The DTS documentation can be found in Documentation/devicetree/bindings/rapidio/keystone-srio.txt.
The MP functionality relies on KeyStone hwqueue and packet DMA drivers.

Signed-off-by: Aurelien Jacquiot <a-jacquiot@ti.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1415,6 +1415,18 @@ source "drivers/pci/pcie/Kconfig"
 
 source "drivers/pcmcia/Kconfig"
 
+config MIGHT_HAVE_RAPIDIO
+        bool
+
+config RAPIDIO
+        bool "RapidIO support"
+        depends on MIGHT_HAVE_RAPIDIO || PCI
+        help
+          If you say Y here, the kernel will include drivers and
+          infrastructure code to support RapidIO interconnect devices.
+
+source "drivers/rapidio/Kconfig"
+
 endmenu
 
 menu "Kernel Features"
