--- a/arch/arm/boot/dts/keystone.dtsi
+++ b/arch/arm/boot/dts/keystone.dtsi
@@ -570,6 +570,19 @@
 					   * remove this attribute */
 		};
 
+                srss: srss@2330000 {
+                        compatible = "ti,keystone-srss";
+                        reg = <0x02330000 0x800>;
+                        clocks = <&clksr>;
+                        clock-names = "srssclock";
+                };
+
+                debugss: debugss {
+                        compatible = "ti,keystone-debugss";
+                        clocks = <&mainpllclk>, <&armpllclk>, <&clkdebugsstrc>, <&gemtraceclk>, <&clktetbtrc>;
+                        clock-names = "mainpllclock", "armpllclock", "debugssclock", "gemtraceclock", "tetbclock";
+                };
+
 		sysctrl {
 			/* add all system level resources here that are used by keystone soc code */
 			compatible = "ti,keystone-sys";
